--- a/index.html
+++ b/index.html
@@ -1,25 +1,1 @@
-<!DOCTYPE html>
-<html>
-
-	<head>
-		<meta charset=utf-8>
-		<title>Gobie Nanthakumar</title>
-		<meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0">
-		<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel=stylesheet>
-		<link href=/static/css/app.94ba74383e3fc5f43578fae359a7bfad.css rel=stylesheet>
-		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="/static/favicons/favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="/static/favicons/favicon-16x16.png">
-		<link rel="shortcut icon" type="image/x-icon" href="/static/favicons/favicon.ico">
-		<link rel="manifest" href="/static/favicons/manifest.json">
-		<meta name="theme-color" content="#ffffff">
-	</head>
-
-	<body>
-		<div id=app></div>
-		<script type=text/javascript src=/static/js/manifest.4968b133885951f7d264.js></script>
-		<script type=text/javascript src=/static/js/vendor.976a88dac8f7d68cc18a.js></script>
-		<script type=text/javascript src=/static/js/app.472eff1d1dc4219f43f5.js></script>
-	</body>
-
-</html>
+<!DOCTYPE html><html><head><meta charset=utf-8><title>Gobie Nanthakumar</title><meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0"><link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel=stylesheet><link rel=apple-touch-icon sizes=180x180 href=/apple-touch-icon.png><link rel=icon type=image/png sizes=32x32 href=/static/favicons/favicon-32x32.png><link rel=icon type=image/png sizes=16x16 href=/static/favicons/favicon-16x16.png><link rel="shortcut icon" type=image/x-icon href=/static/favicons/favicon.ico><link rel=manifest href=/static/favicons/manifest.json><meta name=theme-color content=#ffffff><link href=/static/css/app.0dfcdca6212d154fc3c57f8dd5dfdc99.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/static/js/manifest.4968b133885951f7d264.js></script><script type=text/javascript src=/static/js/vendor.976a88dac8f7d68cc18a.js></script><script type=text/javascript src=/static/js/app.472eff1d1dc4219f43f5.js></script></body></html>
